# Project

./: CMakeLists.txt  Jenkinsfile
ProjectA/: CMakeLists.txt  main.cpp
ProjectB/: CMakeLists.txt  utils.cpp  utils.h
ProjectC/: CMakeLists.txt  main.cpp
ProjectD/: CMakeLists.txt  main.cpp
